# ffxiv-versions

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: data.yml
data/csv/: cn.csv  global.csv  kr.csv  tw.csv
data/json/: cn.json  global.json  kr.json  tw.json
re-export/: Cargo.toml
re-export/src/: main.rs
sanity-check/: Cargo.toml
sanity-check/src/: main.rs  update_notice.rs
sanity-check/src/thaliak/: 2022-08-14.json  query.graphql  query.rs
sanity-check/src/update_notice/: cn.rs  global.rs  kr.rs  tw.rs
types/: Cargo.toml
types/src/: lib.rs  release_date_format.rs
types/tests/: ser_n_de.rs
util/: Cargo.toml
util/src/: lib.rs  rw.rs
