[workspace]
members = [
	"types",
]
resolver = "3"

[workspace.dependencies]
ffxiv-version-types = { path = "./types" }

anyhow = { version = "1.0" }
chrono = { version = "0.4" }
csv = { version = "1.4" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
url = { version = "2.5" }


[workspace.lints]
clippy.pedantic = "warn"
