[workspace]
members = [
    "re-export",
	"sanity-check",
	"types",
	"util",
]
resolver = "3"

[workspace.dependencies]
ffxiv-versions-types = { path = "./types" }
ffxiv-versions-util = { path = "./util" }

anyhow = { version = "1.0" }
chrono = { version = "0.4" }
clap = { version = "4.5" }
csv = { version = "1.4" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tokio = { version = "1.49" }
url = { version = "2.5" }


[workspace.lints]
clippy.pedantic = "warn"
