[package]
name = "ffxiv-versions-sanity-check"
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
ffxiv-versions-types = { workspace = true }
ffxiv-versions-util = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
env_logger = { version = "0.11.9" }
graphql_client = { version = "0.16" }
regex = { version = "1.12" }
reqwest = { version = "0.13", features = ["json"] }
scraper = { version = "0.25" }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }
