[package]
name = "ffxiv-version-util"
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
ffxiv-version-types = { workspace = true }

anyhow = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["full"] }
